manifests/admission-controller-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: admission-controller-server
  namespace: admission-controller-namespace
spec:
  selector:
    app: admission-controller-server
  ports:
    - port: 443
      targetPort: webhook-api
