manifests/admission-controller-webhook-config.yaml
apiVersion: admissionregistration.k8s.io/v1beta1
kind: ValidatingWebhookConfiguration
metadata:
  name: validating-webhook
  namespace: admission-controller-namespace
webhooks:
  - name: admission-controller-server.admission-controller-namespace.svc
    failurePolicy: Fail
    clientConfig:
      service:
        name: test-validations
        namespace: admission-controller-namespace
        path: /validate/deployments
      caBundle: <redacted> # a base64 encoded self signed ca cert is needed because all Admission Webhooks need to be on SSL
    rules:
      - apiGroups: ["apps"]
        resources:
          - "deployments"
        apiVersions:
          - "*"
        operations:
          - CREATE
